Added sessionStorage reviewer

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -29,6 +29,12 @@
     <hr>
   </div>
   <div>
+    <h4>Update details</h4>
+    <hr>
+    <p>NOT IMPLEMENTED YET</p>
+    <hr>
+  </div>
+  <div>
     <h4>Roles</h4>
     <hr>
     <dl class="dl-horizontal">
@@ -87,12 +93,17 @@
     <hr>
   </div>
   <div>
-    <h4>Skill competences</h4>
+    <h4>My users</h4>
     <hr>
     <dl class="dl-horizontal">
-      <dt></dt>
-      <dd></dd>
+
     </dl>
+    <hr>
+  </div>
+  <div>
+    <h4>Skill competences</h4>
+    <hr>
+    <p>NOT READY TO IMPLEMENT YET</p>
   </div>
 
   <div>
