--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -92,12 +92,23 @@
     </dl>
     <hr>
   </div>
-  <div>
-    <h4>My users</h4>
+  <div ng-if="hasDescendants">
+    <h4>My descendants</h4>
     <hr>
-    <dl class="dl-horizontal">
-
-    </dl>
+    <table class="table table-hover table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>First name</th>
+          <th>Last name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="myDescendant in myDescendants">
+          <td>{{myDescendant.firstName}}</td>
+          <td>{{myDescendant.lastName}}</td>
+        </tr>
+      </tbody>
+    </table>
     <hr>
   </div>
   <div>
@@ -113,14 +124,6 @@
     <hr>
   </div>
 </div>
-
-<!--<div ng-show="isBum || isCompetenceLeader || isPracticeManager || isCoach">
-  <h4>My descendants</h4>
-  <hr>
-  <p ng-repeat="myUser in myUsers">
-    User {{$index + 1}}: {{myUser.firstName}} {{myUser.lastName}} from {{myUser.unit}}
-  </p>
-</div>-->
 
 <!--
 _links (get stuff):
