--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -1,11 +1,47 @@
-<ul class="list-unstyled timeline">
-    <li class="timeline__component" ng-repeat="timelineItem in timelineItems">
-        <h1 class="timeline__heading">{{timelineItem.title}}</h1>
-        <span class="timeline__date">{{timelineItem.date | date : 'mediumDate'}}</span>
-        <p>{{timelineItem.description}}</p>
-        <div class="timeline__authors">
-            <a class="avatar" href=""><img class="avatar__image" ng-src="https://placekitten.com/g/200/300" /></a>
-            <a class="avatar" href=""><img class="avatar__image" ng-src="https://placekitten.com/g/200/300" /></a>
-        </div>
-    </li>
-</ul>
+<div ng-show="myTimelineItems.length">
+  <form class="form-inline">
+    <div class="form-group">
+      <label for="description">Filter description</label>
+      <input ng-model="query.description" type="text" id="description"/>
+    </div>
+    <div class="form-group">
+      <label for="type">Filter type</label>
+      <select ng-model="query.type" id="type">
+        <option value="" selected>All types</option>
+        <option value="Competence">Competence</option>
+        <option value="BusinessUnit">BusinessUnit</option>
+        <option value="Personal">Personal</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="length">Filter length</label>
+      <select ng-model="query.length" id="length">
+        <option value="" selected>All lengths</option>
+        <option value="ShortTerm">ShortTerm</option>
+        <option value="LongTerm">LongTerm</option>
+      </select>
+    </div>
+  </form>
+
+  <div>
+    <ul class="list-unstyled">
+      <li ng-repeat="timelineItem in filteredItems = (myTimelineItems | filter:query | orderBy:createDate)">
+        <h1><strong>Description</strong>: {{timelineItem.description}}</h1>
+
+        <p><strong>Create date</strong>: {{timelineItem.createDate | date:'mediumDate'}}</p>
+
+        <p><strong>End date</strong>: {{timelineItem.endDate | date:'mediumDate'}}</p>
+
+        <p><strong>Target date</strong>: {{timelineItem.targetDate | date:'mediumDate'}}</p>
+
+        <p><strong>Type</strong>: {{timelineItem.type}}</p>
+
+        <p><strong>Length</strong>: {{timelineItem.length}}</p>
+        <hr/>
+      </li>
+    </ul>
+    <p ng-hide="filteredItems.length">No results</p>
+  </div>
+
+</div>
+<p ng-show="!myTimelineItems.length">You have no events on your timeline yet</p>
