--- a/app/views/roles.html
+++ b/app/views/roles.html
@@ -1,12 +1,15 @@
-<h4>Role Details</h4>
+<h4>Role Management</h4>
 <h5>{{message}}</h5>
 
 
-<p ng-repeat="role in roles">
-  Functional role {{$index + 1}}: {{role.name}}
-  <button class="btn btn-primary" ng-click="deleteRole(role._links.self.href)">Delete role</button>
-</p>
-
+<md-list>
+  <md-subheader class="md-no-sticky">Your roles</md-subheader>
+  <md-list-item ng-repeat="role in roles">
+    <p> {{ role.name }} </p>
+    <md-button class="md-raised md-warn" ng-click="deleteRole(role._links.self.href)"
+               ng-model="role">Remove
+    </md-button>
+  </md-list-item>
 
 <div>
     <hr>
@@ -16,48 +19,38 @@
 <h5>Pick a person in your unit to add roles to.</h5>
 <div>
 
+  <md-select placeholder=" Pick person
+  " ng-change="selectPerson()" ng-model="selectedItem" md-on-open="persons"
+             style="width: 200px;">
+    <md-option ng-value="person" ng-repeat="person in persons">{{person.firstName}} {{person.lastName}}</md-option>
+  </md-select>
 
-  <p>selected item is : {{selectedItem.firstName}}</p>
-
-  <p> link to selected item is : {{selectedItem._links.self.href}} </p>
-  <select class="" ng-change="selectPerson()" ng-model="selectedItem"
-          ng-options="person.firstName for person in persons">
-  </select>
 
 
 </div>
-
 
 <div ng-show="selected">
-  <h6>Select a role</h6>
 
-  <p>selected item is : {{rolling.name}}</p>
 
-  <p>link to selected item is : {{rolling._links.self.href}} </p>
-
-  <select class="" ng-change="selectRole()" ng-model="rolling"
-          ng-options="role.name for role in avroles">
-  </select>
-  <button ng-click="addRole(rolling)">Add
-  </button>
-
+  <md-select placeholder=" Pick a role to assign
+  " ng-change="selectRole()" ng-model="rolling" md-on-open="avroles"
+             style="width: 200px;">
+    <md-option ng-value="role" ng-repeat="role in avroles">{{role.name}}</md-option>
+  </md-select>
+  <md-button ng-show="roleSelected" class="md-fab md-success" ng-click="addRole(rolling)">Add
+  </md-button>
 
   <div>
-  <table class="table table-hover table-striped table-bordered">
-    <thead>
-    <tr>
-      <th>{{selectedItem.firstName}} 's roles</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="otherRole in otherRoles">
-      <td>{{otherRole.name}}</td>
-      <td>
-        <button ng-click="removeRoleOfOther(otherRole._links.self.href)">remove</button>
-      </td>
-    </tr>
 
-    </tbody>
-  </table>
-</div>
+
+    <md-list>
+      <md-subheader class="md-no-sticky">{{selectedItem.firstName}} {{selectedItem.lastName}}'s roles</md-subheader>
+      <md-list-item ng-repeat="otherRole in otherRoles">
+        <p> {{ otherRole.name }} </p>
+        <md-button class="md-raised md-warn" ng-click="removeRoleOfOther(otherRole._links.self.href)"
+                   ng-model="otherRole">Remove
+        </md-button>
+      </md-list-item>
+
+  </div>
 </div>
