--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -5,25 +5,25 @@
     <h4>Details</h4>
     <dl class="dl-horizontal">
       <dt>Active</dt>
-      <dd><input type="checkbox" ng-model="myProfile.active" disabled/></dd>
+      <dd><input type="checkbox" ng-model="myDetails.active" disabled/></dd>
       <dt>Photo</dt>
-      <dd><img ng-src="{{myProfile.photo}}" alt="Profile photo"/></dd>
+      <dd><img ng-src="{{myDetails.photo}}" alt="Profile photo"/></dd>
       <dt>First name</dt>
-      <dd>{{myProfile.firstName}}</dd>
+      <dd>{{myDetails.firstName}}</dd>
       <dt>Last name</dt>
-      <dd>{{myProfile.lastName}}</dd>
+      <dd>{{myDetails.lastName}}</dd>
       <dt>Gender</dt>
-      <dd>{{myProfile.gender}}</dd>
+      <dd>{{myDetails.gender}}</dd>
       <dt>Birth date</dt>
-      <dd>{{myProfile.birthDate}}</dd>
+      <dd>{{myDetails.birthDate}}</dd>
       <dt>Address</dt>
-      <dd>{{myProfile.address}}</dd>
+      <dd>{{myDetails.address}}</dd>
       <dt>Unit</dt>
-      <dd>{{myProfile.unit}}</dd>
+      <dd>{{myDetails.unit}}</dd>
       <dt>Enrollment date</dt>
-      <dd>{{myProfile.enrollmentDate}}</dd>
+      <dd>{{myDetails.enrollmentDate}}</dd>
       <dt>Contact information</dt>
-      <dd>{{myProfile.contactInformation}}</dd>
+      <dd>{{myDetails.contactInformation}}</dd>
     </dl>
     <hr>
   </div>
