Update profile view

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -43,7 +43,7 @@
     </table>
     <hr>
   </div>
-  <div>
+  <div ng-if="hasCustomers">
     <h4>Customers</h4>
     <table class="table table-hover table-striped table-bordered">
       <thead>
@@ -115,7 +115,7 @@
     </table>
     <hr>
   </div>
-  <div>
+  <div ng-if="hasCoaches">
     <h4>Coaches</h4>
     <table class="table table-hover table-striped table-bordered">
       <thead>
