--- a/app/views/panel.html
+++ b/app/views/panel.html
@@ -1,11 +1,70 @@
-<h1>Welcome Admin! Play with the controls of your likings!</h1>
+<md-toolbar ng-show="!showSearch">
+  <div class="md-toolbar-tools">
 
+    <h3>
+      Persons in Ordina
+    </h3>
+    <span flex></span>
+    <md-button aria-label="Search" ng-click="showSearch = !showSearch">
+      <ng-md-icon icon="search"></ng-md-icon>
+    </md-button>
 
-<h2>Add Users to my Unit!</h2>
+  </div>
 
+</md-toolbar>
+<md-toolbar class="md-hue-1" ng-show="showSearch">
+  <div class="md-toolbar-tools">
+    <md-button ng-click="showSearch = !showSearch" aria-label="Back">
+      <ng-md-icon icon="arrow_back"></ng-md-icon>
+    </md-button>
+    <h3 flex="10">
+      Back
+    </h3>
+    <md-input-container md-theme="input" flex>
+      <label>&nbsp;</label>
+      <input ng-model="searchText" placeholder="enter search">
+    </md-input-container>
+    <md-button aria-label="Search" ng-click="showSearch = !showSearch">
+      <ng-md-icon icon="search"></ng-md-icon>
+    </md-button>
 
-<md-select placeholder=" Pick person
-  " ng-change="selectPerson()" ng-model="selectedItem" md-on-open="persons"
-           style="width: 200px;">
-  <md-option ng-value="person" ng-repeat="person in persons">{{person.firstName}} {{person.lastName}}</md-option>
-</md-select>
+  </div>
+</md-toolbar>
+<md-data-table-toolbar>
+  <h2 class="md-title">Persons</h2>
+</md-data-table-toolbar>
+
+<md-data-table-container>
+  <table md-data-table md-progress="deferred">
+    <thead md-order="unit" md-trigger="">
+    <tr>
+      <th name="First Name" order-by></th>
+      <th name="Last Name" order-by="person.lastName"></th>
+      <th name="Unit" order-by="unit"></th>
+      <th name="Profile"></th>
+      <th name="Join me unit"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr md-auto-select ng-repeat="person in persons | filter:searchText">
+      <td>{{person.firstName}}</td>
+      <td>{{person.lastName}}</td>
+      <td>{{person.unit}}</td>
+      <td>
+        <md-button class="md-icon-button md-accent">
+          <ng-md-icon icon="send"></ng-md-icon>
+        </md-button>
+      </td>
+      <td>
+        <md-button class="md-icon-button md-accent">
+          <ng-md-icon icon="person_add"></ng-md-icon>
+        </md-button>
+
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</md-data-table-container>
+
+<md-data-table-pagination md-limit="query.limit" md-page="query.page" md-total="{{desserts.total}}"
+                          md-trigger="onPaginationChange"></md-data-table-pagination>
