--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,9 +7,11 @@
             <div class="account-wall">
 
                 <form class="form-signin">
-                    <input type="text" class="form-control" placeholder="Username" ng-model="login.username" autofocus required>
-                    <input type="password" class="form-control" ng-model="login.password" placeholder="Password" required>
-                    <button class="btn btn-lg btn-primary btn-block" ng-click="login(login)">
+                  <input type="text" class="form-control" placeholder="Username" ng-model="userData.username" autofocus
+                         required>
+                  <input type="password" class="form-control" ng-model="userData.password" placeholder="Password"
+                         required>
+                  <button class="btn btn-lg btn-primary btn-block" ng-click="loginCredentials()">
                         Log in</button>
                     </form>
             </div>
