Create directive a little about me

--- a/app/views/alittleaboutme.html
+++ b/app/views/alittleaboutme.html
@@ -1,6 +1,6 @@
 <style>
   #aLittleAboutMe {
-
+    width: 35%;
   }
 
   .details {
@@ -9,9 +9,9 @@
 </style>
 
 <div id="aLittleAboutMe">
-  <h1>
+  <h4>
     A LITTLE ABOUT ME
-  </h1>
+  </h4>
   <p>
     Lester is a highly motivated person with strong interest in IT.
     During his education, he specialized in web technologies such as html/css, javascript, PHP and ASP.NET.
