Directive ready: a little about me

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,5 +1,4 @@
 <style>
-
   .md-tab:hover {
     color: #E98300;
   }
@@ -15,7 +14,7 @@
       <md-tab class="md-tab-item" label="ABOUT">
         <md-content class="md-padding">
 
-          <example></example>
+          <a-little-about-me></a-little-about-me>
 
         </md-content>
       </md-tab>
