Directive ready: certificates

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -15,6 +15,7 @@
         <md-content class="md-padding">
 
           <a-little-about-me></a-little-about-me>
+          <certificates></certificates>
 
         </md-content>
       </md-tab>
