Added skillCompetence as a directive to the learning tab

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -26,6 +26,7 @@
       </md-tab>
       <md-tab label="LEARNING">
         <md-content class="md-padding">
+          <skillset></skillset>
         </md-content>
       </md-tab>
       <md-tab label="ACTIVITY">
