Now responsive: a little about me & certificates

--- a/app/views/alittleaboutme.html
+++ b/app/views/alittleaboutme.html
@@ -1,6 +1,11 @@
 <style>
   #aLittleAboutMe {
-    width: 35%;
+    margin-bottom: 30px;
+    width: 100%;
+  }
+
+  .myDetails {
+    clear: both;
   }
 
   .myDetails ng-md-icon {
@@ -8,7 +13,28 @@
   }
 
   .myDetails p {
-    margin-left: 35px;
+    margin-left: 30px;
+    padding: 2px 5px 2px 5px;
+  }
+
+  /* Extra small devices (phones, less than 768px) */
+  /* No media query since this is the default in Bootstrap */
+
+  /* Small devices (tablets, 768px and up) */
+  @media (min-width: 768px) {
+
+  }
+
+  /* Medium devices (desktops, 992px and up) */
+  @media (min-width: 992px) {
+    #aLittleAboutMe {
+      width: 35%;
+    }
+  }
+
+  /* Large devices (large desktops, 1200px and up) */
+  @media (min-width: 1200px) {
+
   }
 </style>
 
