Directive ready and responsive: interests

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -16,6 +16,7 @@
 
           <a-little-about-me></a-little-about-me>
           <certificates></certificates>
+          <interests></interests>
 
         </md-content>
       </md-tab>
