--- a/app/views/alittleaboutme.html
+++ b/app/views/alittleaboutme.html
@@ -38,7 +38,7 @@
   }
 </style>
 
-<div id="aLittleAboutMe">
+<div id="aLittleAboutMe" style="border: solid 1px black;">
   <h4>
     A LITTLE ABOUT ME
   </h4>
