--- a/app/views/certificates.html
+++ b/app/views/certificates.html
@@ -1,11 +1,12 @@
 <style>
   #certificates {
+    display: inline-block;
     margin-bottom: 30px;
     width: 100%;
   }
 
-  .certificatesContainer {
-    display: inline-block;
+  #certificatesContainer {
+
   }
 
   .certificatesItem {
@@ -26,9 +27,9 @@
   .certificatesItem p {
     color: #797478;
     font: 9px/1.5 Verdana, Helvetica, sans-serif;
+    margin-top: 5px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 5px;
     text-transform: uppercase;
     width: 80px;
   }
@@ -56,9 +57,9 @@
   }
 </style>
 
-<div id="certificates">
+<div id="certificates" style="border: solid 1px black;">
   <h4>CERTIFICATES</h4>
-  <div class="certificatesContainer">
+  <div id="certificatesContainer">
     <div class="certificatesItem">
       <img ng-src="http://lorempixel.com/80/80/" alt="Certificate"/>
       <p>
