Added timeline concept to Learning-tab

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -28,6 +28,7 @@
       <md-tab label="LEARNING">
         <md-content class="md-padding">
           <skillset></skillset>
+          <learning></learning>
         </md-content>
       </md-tab>
       <md-tab label="ACTIVITY">
