--- a/app/views/about.html
+++ b/app/views/about.html
@@ -17,6 +17,7 @@
           <a-little-about-me></a-little-about-me>
           <certificates></certificates>
           <interests></interests>
+          <daily-route></daily-route>
 
         </md-content>
       </md-tab>
